--- a/src/index.html
+++ b/src/index.html
@@ -1,45 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    />
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Indie+Flower&family=Ravi+Prakash&display=swap");
-    </style>
-  </head>
-  <body>
-    <header>
-      <picture>
-        <source srcset="img/header_mobile.jpg" media="(max-width: 1280px)" />
-        <source srcset="img/header_desktop.jpg" />
-        <img src="img/header_desktop.jpg" style="width: 100%; display: block" />
-      </picture>
-    </header>
-    <nav class="menu">
-      <ul id="list-menu" class="list-menu">
-        <li class="menuItem">Inicio</li>
-        <li class="menuItem" id="btn-character">Personajes</li>
-        <li class="menuItem">Episodios</li>
-        <li class="menuItem">Ubicaciones</li>
-      </ul>
-      <span><i class="material-icons" id="menu-icon">menu</i></span>
-    </nav>
-    <main>
-      <section id="section-character" class="hidden-section">
-        <div class="container-bar-sort">
-          <div id="search-bar" class="container-bar"></div>
-          <div class="container-sort">
-            <div id="list-order"></div>
-            <button id="btn-delete" class="btn-delete">Borrar Filtros</button>
-          </div>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+</head>
+
+<body>
+  <header>
+    <picture>
+      <source srcset="img/header_mobile.jpg" media="(max-width: 1280px)" />
+      <source srcset="img/header_desktop.jpg" />
+      <img src="img/header_desktop.jpg" style="width: 100%; display: block" />
+    </picture>
+  </header>
+  <nav class="menu">
+    <ul id="list-menu" class="list-menu">
+      <li class="menuItem"><a>Home</a></li>
+      <li class="menuItem" id="btn-character">Personajes</li>
+      <li class="menuItem">Episodios</li>
+      <li class="menuItem">Ubicaciones</li>
+    </ul>
+    <span><i class="material-icons" id="menu-icon">menu</i></span>
+  </nav>
+  <main>
+    <section id="section-character" class="hidden-section">
+      <div class="container-bar-sort">
+        <div id="search-bar" class="container-bar"></div>
+        <div class="container-sort">
+          <div id="list-order"></div>
+          <button id="btn-delete" class="btn-delete">Borrar Filtros</button>
         </div>
+      </div>
       <div class="container-filter-wrapper">
         <ul class="filter-character">
           <li id="filter-status" class="category">
@@ -51,26 +47,26 @@
             <ul id="list-specie" class="filter-list"></ul>
           </li>
           <li id="filter-gender" class="category">
-            GENERO  »
+            GENERO »
             <ul id="list-gender" class="filter-list"></ul>
           </li>
-         
+
         </ul>
         <div id="root" class="wrapper"></div>
       </div>
-        <div class="pagenumbers" id="pagination"></div>
-      </section>
-      <section>
-        <!--MODAL DE TARJETA POR PERSONAJES-->
-        <div id="modal_container" class="modal-container">
-          <div class="modal" id="modal"></div>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <hr />
-      @Copyrigt.All rights reserved.
-    </footer>
-    <script src="main.js" type="module"></script>
-  </body>
+      <div class="pagenumbers" id="pagination"></div>
+    </section>
+    <section>
+      <!--MODAL DE TARJETA POR PERSONAJES-->
+      <div id="modal_container" class="modal-container">
+        <div class="modal" id="modal"></div>
+      </div>
+    </section>
+  </main>
+  <footer>
+       @Copyrigt.All rights reserved.
+  </footer>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
